--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "generator-tman",
   "version": "0.0.2",
   "description": "unit test generator",
+  "scripts": {
+    "test": "./node_modules/mocha/bin/_mocha"
+  },
   "files": [
     "generators"
   ],
@@ -12,7 +15,9 @@
     "lodash": "~4.6.1",
     "yeoman-generator": "^0.22.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "mocha": "~2.4.5"
+  },
   "license": "MIT",
   "repository": "git@github.com:FrendEr/generator-tman.git"
 }
