--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
 language: node_js
 node_js:
-  - "5.0"
+  - "stable"
+  - "4.0.0"
+  - "5.0.0"
+
+# whitelist
+branches:
+  only:
+  - master
+  - stable
