--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "yeoman-generator": "^0.22.5"
   },
   "devDependencies": {
+    "coveralls": "~2.11.8",
     "mocha": "~2.4.5",
+    "mocha-lcov-reporter": "~1.2.0",
     "yeoman-assert": "~2.1.1",
     "yeoman-test": "~1.1.0"
   },
