--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
-before_install:
-  - pip install --upgrade pip
-  - pip install codecov
-after_success:
-  - codecov
+install:
+  - npm install -g codecov
 language: node_js
 node_js:
   - "stable"
   - "4.0.0"
   - "5.0.0"
+script:
+  - istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec
+  - codecov
