--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 install:
-  - npm install -g codecov istanbul
+  - npm install -g codecov istanbul mocha
 language: node_js
 node_js:
   - "stable"
   - "4.0.0"
   - "5.0.0"
 script:
-  - istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec
+  - istanbul cover _mocha --report lcovonly -- -R spec
   - codecov
