--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.2",
   "description": "unit test generator",
   "scripts": {
-    "test": "./node_modules/mocha/bin/_mocha"
+    "test": "istanbul cover node_modules/mocha/bin/_mocha && codecov" 
   },
   "files": [
     "generators"
@@ -17,7 +17,9 @@
   "devDependencies": {
     "mocha": "~2.4.5",
     "yeoman-assert": "~2.1.1",
-    "yeoman-test": "~1.1.0"
+    "yeoman-test": "~1.1.0",
+    "istanbul": ">0.3.2",
+    "codecov": ">1.0.0"
   },
   "license": "MIT",
   "repository": "git@github.com:FrendEr/generator-tman.git"
